--- a/MvcKutuphane/Views/Kitap/KitapGetir.cshtml
+++ b/MvcKutuphane/Views/Kitap/KitapGetir.cshtml
@@ -18,19 +18,25 @@
         </div>
         <div style="margin-bottom:15px">
             <label>Kategori</label>
-            @Html.TextBoxFor(k => k.KATEGORI, new { @class = "form-control" })
+            <!--  k.TblKategori'den gelen ID değerini aktar  -->
+            <!--  ID değeri dropdown içerisinden dgr1'e bağlı olarak seç  -->
+            @Html.DropDownListFor(k => k.TblKategori.ID, (List<SelectListItem>)ViewBag.dgr1, new { @class = "form-control" })
         </div>
         <div style="margin-bottom:15px">
             <label>Kitap Yazarı</label>
-            @Html.TextAreaFor(k => k.YAZAR, new { @class = "form-control" })
+            @Html.DropDownListFor(k => k.TblYazar.ID, (List<SelectListItem>)ViewBag.dgr2, new { @class = "form-control" })
         </div>
         <div style="margin-bottom:15px">
             <label>Basım Yılı</label>
-            @Html.TextAreaFor(k => k.BASIMYIL, new { @class = "form-control" })
+            @Html.TextBoxFor(k => k.BASIMYIL, new { @class = "form-control" })
+        </div>
+        <div style="margin-bottom:15px">
+            <label>Basım Yılı</label>
+            @Html.TextBoxFor(k => k.YAYINEVI, new { @class = "form-control" })
         </div>
         <div style="margin-bottom:15px">
             <label>Sayfa Sayısı</label>
-            @Html.TextAreaFor(k => k.SAYFA, new { @class = "form-control" })
+            @Html.TextBoxFor(k => k.SAYFA, new { @class = "form-control" })
         </div>
     </div>
     <div>
