--- a/MvcKutuphane/Views/Yazar/Index.cshtml
+++ b/MvcKutuphane/Views/Yazar/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
-<h2>Yazarlar</h2>
+<h2 style="margin-top:15px">Yazarlar</h2style="margin-top:15px">
 
 <table class="table table-bordered">
     <tr>
