--- a/MvcKutuphane/Views/Kategori/Index.cshtml
+++ b/MvcKutuphane/Views/Kategori/Index.cshtml
@@ -7,7 +7,7 @@
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
-<h2>Kategoriler</h2>
+<h2 style="margin-top:15px">Kategoriler</h2>
 
 <table class="table table-bordered">
     <tr>
